refactor: List.copyOf 대신, 수정 불가능하도록만 처리해서 반환하도록 수정